--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -12,32 +12,32 @@
     "ssl-local": "npm run fixAngularReact && npm run ssl -- -c local",
     "asd": "concurrently -k \"npm run ssl\" \"npm run lib\"",
     "build-lib": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build diagnostic-data",
-    "build-applens": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --prod",
+    "build-applens": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration production",
     "build-ncloud-applens-prod": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-production",
     "build-ncloud-applens-local": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-local",
-    "build-asd": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build app-service-diagnostics --prod --deploy-url https://app-service-diagnostics-portal.azureedge.net/ --sourceMap=true",
-    "build-ng-flowchart": "ng build ng-flowchart --prod",
+    "build-asd": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build app-service-diagnostics --configuration production --deploy-url https://app-service-diagnostics-portal.azureedge.net/ --sourceMap=true",
+    "build-ng-flowchart": "ng build ng-flowchart --configuration production",
     "build": "npm run fixAngularReact && npm run build-lib && npm run build-applens && npm run build-asd && npm run build-ng-flowchart",
     "test": "ng test",
     "fixAngularReact": "node fixAngularReactLib.js",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "lib": "npm run fixAngularReact && ng build diagnostic-data --watch",
-    "generate-report": "ng build app-service-diagnostics --prod",
+    "generate-report": "ng build app-service-diagnostics --configuration production",
     "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
   },
   "dependencies": {
     "@angular-builders/custom-webpack": "^11.1.1",
-    "@angular-devkit/core": "^11.2.19",
+    "@angular-devkit/core": "^12.2.18",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@angular/router": "11.2.14",
-    "@angular/upgrade": "11.2.14",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "^12.2.16",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/router": "12.2.16",
+    "@angular/upgrade": "12.2.16",
     "@fluentui/react": "^8.47.3",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@ng-select/ng-select": "^6.1.0",
@@ -84,12 +84,12 @@
     "vis": "^4.21.0",
     "vscode-ws-jsonrpc": "^0.2.0",
     "web-animations-js": "^2.3.2",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "11.2.19",
-    "@angular/compiler-cli": "11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular/cli": "12.2.18",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/language-service": "^12.2.16",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.11.1",
@@ -108,7 +108,7 @@
     "protractor": "~7.0.0",
     "selfsigned": "^1.10.2",
     "ts-node": "~4.1.0",
-    "typescript": "~4.0.8",
+    "typescript": "~4.3.5",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
