--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -15,7 +15,7 @@
     "build-applens": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration production",
     "build-ncloud-applens-prod": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-production",
     "build-ncloud-applens-local": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-local",
-    "build-asd": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build app-service-diagnostics --configuration production --deploy-url https://app-service-diagnostics-portal.azureedge.net/ --sourceMap=true && npm run fixModuleTagsToDefer",
+    "build-asd": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build app-service-diagnostics --configuration production --sourceMap=true && npm run fixModuleTagsToDefer",
     "build-ng-flowchart": "ng build ng-flowchart --configuration production",
     "build": "npm run fixAngularReact && npm run build-lib && npm run build-applens && npm run build-asd && npm run build-ng-flowchart",
     "test": "ng test",
