--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -23,7 +23,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "lib": "npm run fixAngularReact && ng build diagnostic-data --watch",
-    "generate-report": "ng build app-service-diagnostics --configuration production",
+    "generate-report": "npm install webpack-bundle-analyzer -g  && ng build app-service-diagnostics --configuration production --stats-json",
     "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
   },
   "dependencies": {
